// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPluginProject creates a backend plugin project 1`] = `
[
  [
    ".gitignore",
    "node_modules
dist
dist-types
coverage
*.tsbuildinfo
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

An RHDH dynamic backend plugin using the New Backend System.

## Development

\`\`\`bash
yarn install
yarn build
yarn test
\`\`\`

## Exporting

Export or package this plugin without adding the RHDH CLI to this project:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
npx @red-hat-developer-hub/cli plugin package --export-to ./plugin-registry
\`\`\`

RHDH Dynamic Plugin Factory is the preferred workflow for repeatable build and packaging automation.
",
  ],
  [
    "backstage.json",
    "{ "version": "1.54.0" }
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin-backend",
  "version": "0.1.0",
  "packageManager": "yarn@4.17.1",
  "private": true,
  "license": "Apache-2.0",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "backstage": { "role": "backend-plugin", "pluginId": "example-plugin" },
  "scripts": {
    "start": "backstage-cli package start",
    "build": "yarn tsc && backstage-cli package build",
    "tsc": "tsc --declaration",
    "test": "backstage-cli package test --passWithNoTests"
  },
  "dependencies": { "@backstage/backend-plugin-api": "1.10.0" },
  "devDependencies": {
    "@backstage/backend-defaults": "0.12.5",
    "@backstage/cli": "0.36.5",
    "@types/jest": "^29.5.14",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "typescript": "^5.4.5"
  }
}
",
  ],
  [
    "src/index.ts",
    "import {
  coreServices,
  createBackendPlugin,
} from '@backstage/backend-plugin-api';

const plugin = createBackendPlugin({
  pluginId: 'example-plugin',
  register(reg) {
    reg.registerInit({
      deps: {
        httpRouter: coreServices.httpRouter,
        logger: coreServices.logger,
      },
      async init({ httpRouter, logger }) {
        httpRouter.addAuthPolicy({
          path: '/health',
          allow: 'unauthenticated',
        });
        httpRouter.use((request, response, next) => {
          if (request.path !== '/health') {
            next();
            return;
          }
          logger.info('Health check requested');
          response.status(200).json({ status: 'ok' });
        });
      },
    });
  },
});

export default plugin;
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": ["src", "dev"],
  "compilerOptions": {
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "dev/index.ts",
    "import { createBackend } from '@backstage/backend-defaults';

const backend = createBackend();

backend.add(import('../src'));
backend.start();
",
  ],
]
`;

exports[`createPluginProject creates a catalog-processor-module plugin project 1`] = `
[
  [
    ".gitignore",
    "node_modules
dist
dist-types
coverage
*.tsbuildinfo
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

An RHDH dynamic catalog processor module.

## Development

\`\`\`bash
yarn install
yarn build
yarn test
\`\`\`

## Exporting

Export or package this plugin without adding the RHDH CLI to this project:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
npx @red-hat-developer-hub/cli plugin package --export-to ./plugin-registry
\`\`\`

RHDH Dynamic Plugin Factory is the preferred workflow for repeatable build and packaging automation.
",
  ],
  [
    "backstage.json",
    "{ "version": "1.54.0" }
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin-catalog-processor-module",
  "version": "0.1.0",
  "packageManager": "yarn@4.17.1",
  "private": true,
  "license": "Apache-2.0",
  "main": "src/index.ts",
  "types": "src/index.ts",
  "backstage": {
    "role": "backend-plugin-module",
    "pluginId": "catalog",
    "pluginPackage": "@backstage/plugin-catalog-backend"
  },
  "scripts": {
    "build": "yarn tsc && backstage-cli package build",
    "tsc": "tsc --declaration",
    "test": "backstage-cli package test --passWithNoTests"
  },
  "dependencies": {
    "@backstage/backend-plugin-api": "1.10.0",
    "@backstage/catalog-model": "1.10.0",
    "@backstage/plugin-catalog-node": "2.2.4"
  },
  "devDependencies": {
    "@backstage/cli": "0.36.5",
    "@types/jest": "^29.5.14",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "typescript": "^5.4.5"
  }
}
",
  ],
  [
    "src/index.ts",
    "import { createBackendModule } from '@backstage/backend-plugin-api';
import {
  catalogProcessingExtensionPoint,
  type CatalogProcessor,
} from '@backstage/plugin-catalog-node';

const processor: CatalogProcessor = {
  getProcessorName: () => 'example-pluginProcessor',
};

const catalogBackendModule = createBackendModule({
  pluginId: 'catalog',
  moduleId: 'example-plugin',
  register(reg) {
    reg.registerInit({
      deps: { catalog: catalogProcessingExtensionPoint },
      async init({ catalog }) {
        catalog.addProcessor(processor);
      },
    });
  },
});

export default catalogBackendModule;
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": ["src"],
  "compilerOptions": {
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
]
`;

exports[`createPluginProject creates a frontend plugin project 1`] = `
[
  [
    ".gitignore",
    "node_modules
dist
dist-types
coverage
*.tsbuildinfo
",
  ],
  [
    ".yarnrc.yml",
    "nodeLinker: node-modules
",
  ],
  [
    "README.md",
    "# example-plugin

An RHDH dynamic frontend plugin using the New Frontend System.

## Development

\`\`\`bash
yarn install
yarn build
yarn test
\`\`\`

## Exporting

Export or package this plugin without adding the RHDH CLI to this project:

\`\`\`bash
npx @red-hat-developer-hub/cli plugin export
npx @red-hat-developer-hub/cli plugin package --export-to ./plugin-registry
\`\`\`

RHDH Dynamic Plugin Factory is the preferred workflow for repeatable build and packaging automation.
",
  ],
  [
    "backstage.json",
    "{ "version": "1.54.0" }
",
  ],
  [
    "package.json",
    "{
  "name": "@internal/backstage-plugin-example-plugin",
  "version": "0.1.0",
  "packageManager": "yarn@4.17.1",
  "private": true,
  "license": "Apache-2.0",
  "files": ["dist"],
  "main": "src/index.ts",
  "types": "src/index.ts",
  "publishConfig": {
    "access": "public",
    "main": "dist/index.esm.js",
    "types": "dist/index.d.ts"
  },
  "exports": {
    ".": "./src/index.ts",
    "./package.json": "./package.json"
  },
  "typesVersions": {
    "*": {
      "package.json": ["package.json"]
    }
  },
  "backstage": { "role": "frontend-plugin", "pluginId": "example-plugin" },
  "scripts": {
    "start": "backstage-cli package start",
    "build": "yarn tsc && backstage-cli package build",
    "tsc": "tsc --declaration",
    "test": "backstage-cli package test --passWithNoTests"
  },
  "dependencies": {
    "@backstage/core-plugin-api": "1.12.7",
    "@backstage/frontend-plugin-api": "0.17.2"
  },
  "devDependencies": {
    "@backstage/cli": "0.36.5",
    "@backstage/frontend-dev-utils": "0.4.5",
    "@types/jest": "^29.5.14",
    "@types/react": "^18.0.0",
    "react": "^18.0.0",
    "react-dom": "^18.0.0",
    "react-router-dom": "^6.30.2",
    "jest": "^29.7.0",
    "jest-environment-jsdom": "^29.7.0",
    "typescript": "^5.4.5"
  },
  "peerDependencies": {
    "react": "^18.0.0",
    "react-dom": "^18.0.0",
    "react-router-dom": "^6.30.2"
  }
}
",
  ],
  [
    "src/index.ts",
    "export { plugin as default } from './plugin';
",
  ],
  [
    "tsconfig.json",
    "{
  "extends": "@backstage/cli/config/tsconfig.json",
  "include": ["src", "dev"],
  "compilerOptions": {
    "jsx": "react-jsx",
    "outDir": "dist-types",
    "rootDir": "."
  }
}
",
  ],
  [
    "src/plugin.tsx",
    "import { createRouteRef } from '@backstage/core-plugin-api';
import { createFrontendPlugin, PageBlueprint } from '@backstage/frontend-plugin-api';

const rootRouteRef = createRouteRef({ id: 'example-plugin' });
const page = PageBlueprint.make({
  params: {
    title: 'example-plugin',
    icon: (
      <svg aria-hidden="true" viewBox="0 0 24 24">
        <path d="M19 13h-2v2h-2v2h2v2h2v-2h2v-2h-2zm-4-6.5A2.5 2.5 0 0 0 12.5 4c-.63 0-1.2.24-1.65.62A3.5 3.5 0 0 0 8 3a3.5 3.5 0 0 0-2.08 6.31A3.5 3.5 0 0 0 7.5 16H9v-2H7.5a1.5 1.5 0 0 1 0-3h1V9H8a1.5 1.5 0 1 1 1.5-1.5V9h2V6.5a1 1 0 1 1 2 0V9h1.5a1.5 1.5 0 1 1 0 3H13v2h2a3.5 3.5 0 0 0 0-7.5z" />
      </svg>
    ),
    path: '/example-plugin',
    routeRef: rootRouteRef,
    loader: () => import('./PluginPage').then(m => <m.PluginPage />),
  },
});

export const plugin = createFrontendPlugin({
  pluginId: 'example-plugin',
  extensions: [page],
  routes: { root: rootRouteRef },
});
",
  ],
  [
    "src/PluginPage.tsx",
    "export function PluginPage() {
  return <h1>example-plugin</h1>;
}
",
  ],
  [
    "dev/index.tsx",
    "import { createDevApp } from '@backstage/frontend-dev-utils';

import plugin from '../src';

createDevApp({ features: [plugin] });
",
  ],
]
`;
